2012-01-20  Andreas Kirschbaum

	* Change color of text inputfields that do not have the focus. Now
	they do not anymore appear inactive.

2012-01-16  Andreas Kirschbaum

	* Add --avoid-copy-area option.

2011-11-29  Andreas Kirschbaum

	* Support CTRL+left-click as an alias for middle-click.

2011-11-23  Andreas Kirschbaum

	* Reorder code to prevent crash on Solaris.

2011-11-19  Andreas Kirschbaum

	* Middle-click in skills dialogs uses the skill (sends /use_skill
	command to server).

	* Add text message logger. See doc/features.html for details.

2011-11-16  Andreas Kirschbaum

	* Implement /again command to repeat the previously entered
	command. Add default keybinding CTRL-G for /again.

	* Share the command history for text input fields having the same
	name in skin file.

	* Properly disable command history access if "enable-history"
	parameter is unset in skin file.

2011-09-21  Andreas Kirschbaum

	* Add missing keybindings for numpad movement.

2011-08-13  Andreas Kirschbaum

	* Update .jnlp file; change default location to
	invidious.meflin.net.

2011-08-04  Andreas Kirschbaum

	* Close book popup dialog on ESC key.

2011-07-24  Andreas Kirschbaum

	* Highlight the active message dialog tab.

2011-07-23  Nicolas Weeger

	* Add quest dialog.

2011-07-05  Andreas Kirschbaum

	* Properly raise dialogs when clicked or moved. Do not randomly
	miss mouse clicks.

	* Add left-clicking a spell to "cast" and middle-clicking to
	"invoke" it. Generally use SHIFT+right button=middle button to
	somewhat help players using a two-button mouse.

2011-07-03  Andreas Kirschbaum

	* Re-enable tabs in messages dialog.

	* Fix keyboard issues. Now /bind accepts all keys and supports all
	modifier combinations. Also allows to enter all possible
	characters in text input fields.

2011-07-02  Andreas Kirschbaum

	* Reliably negotiate map size and ground view size with server
	when the main window is resized.

	* Support left-clicks on arrow buttons in ground view.
